# vital_stat_jp

./: .gitignore  Makefile  README.rst  change_version.sh  pyproject.toml
notebooks/: 01_data_reading.ipynb  02_time_series_analysis.ipynb
tests/: test_vital_statistics_jp.py
vital_statistics_jp/: __init__.py  prompt.py
