[tool.poetry]
name = "vital_statistics_jp"
version = "0.1.6"
description = "vital statistics downloader"
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]
readme = "README.rst"
repository = "https://github.com/u-masao/vital_statistics_jp"

[tool.poetry.dependencies]
python = "^3.7.1"
xlrd = "^2.0.1"
openpyxl = "^3.0.9"
pandas = "1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
